force-app/main/default/objects/CommitCaseAccuracy__c/CommitCaseAccuracy__c.object-meta.xml
<CustomObject>
    <description>Stores Opportunity data snapshot at the start and end of each Fiscal Period</description>
    <label>CommitCaseAccuracy</label>
    <nameField>
        <displayFormat>CCS-{000000}</displayFormat>
        <label>Commit Case Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommitCaseAccuracies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>