force-app/main/default/objects/CommitCaseAccuracy__c/fields/AmountAtEnd__c.field-meta.xml
<CustomField>
    <fullName>AmountAtEnd__c</fullName>
    <label>Amount at End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>