force-app/main/default/objects/CommitCaseAccuracy__c/fields/AmountAtStart__c.field-meta.xml
<CustomField>
    <fullName>AmountAtStart__c</fullName>
    <label>Amount at Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>