force-app/main/default/objects/CommitCaseAccuracy__c/fields/CloseDateAtEnd__c.field-meta.xml
<CustomField>
    <fullName>CloseDateAtEnd__c</fullName>
    <label>Close Date at End</label>
    <type>Date</type>
</CustomField>