force-app/main/default/objects/CommitCaseAccuracy__c/fields/CloseDateAtStart__c.field-meta.xml
<CustomField>
    <fullName>CloseDateAtStart__c</fullName>
    <label>Close Date at Start</label>
    <type>Date</type>
</CustomField>