force-app/main/default/objects/CommitCaseAccuracy__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CommitCaseAccuracies</relationshipLabel>
    <relationshipName>CommitCaseAccuracies</relationshipName>
    <type>Lookup</type>
</CustomField>