force-app/main/default/objects/CommitCaseAccuracy__c/fields/ProbabilityAtEnd__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityAtEnd__c</fullName>
    <label>Probability at End</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>