force-app/main/default/objects/CommitCaseAccuracy__c/fields/ProbabilityAtStart__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityAtStart__c</fullName>
    <label>Probability at Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>