force-app/main/default/objects/CommitCaseAccuracy__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CommitCaseAccuracies</relationshipName>
    <type>Lookup</type>
</CustomField>