force-app/main/default/objects/CommitCaseAccuracy__c/fields/StageAtEnd__c.field-meta.xml
<CustomField>
    <fullName>StageAtEnd__c</fullName>
    <label>Stage at End</label>
    <length>32</length>
    <type>Text</type>
</CustomField>