force-app/main/default/objects/CommitCaseAccuracy__c/fields/StageAtStart__c.field-meta.xml
<CustomField>
    <fullName>StageAtStart__c</fullName>
    <label>Stage at Start</label>
    <length>32</length>
    <type>Text</type>
</CustomField>