force-app/main/default/objects/CommitCaseAccuracy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opp__c</columns>
    <columns>Seller__c</columns>
    <columns>StageAtStart__c</columns>
    <columns>StageAtEnd__c</columns>
    <columns>AmountAtStart__c</columns>
    <columns>AmountAtEnd__c</columns>
    <columns>CloseDateAtStart__c</columns>
    <columns>CloseDateAtEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>